--- a/src/vue-cli3/src/styles/_base.scss
+++ b/src/vue-cli3/src/styles/_base.scss
@@ -11,7 +11,20 @@
   }
 }
 
+.pc {
+  @media #{$device-s} {
+    display: none !important;
+  }
+}
+
+.sp {
+  @media #{$device-l} {
+    display: none !important;
+  }
+}
+
 html {
+  font-family: $ff;
   font-size: 10px;
 
   body {
@@ -64,24 +77,14 @@ html {
   bottom: 0;
   left: 0;
   margin: auto;
-  @extend %cover;
-  pointer-events: none;
-}
-
-%cover {
   background-image: url("#{$root}bg_line.svg");
   background-repeat: repeat;
   background-position: center top;
   background-size: 75px 1px;
 
+  pointer-events: none;
+
   @media #{$device-l} {
     background-size: 180px 1px;
-  }
-}
-
-%typewrite {
-  &::after {
-    content: "_";
-    font-size: 1.0em;
   }
 }
