--- a/src/vue-cli3/src/styles/components/_hero.scss
+++ b/src/vue-cli3/src/styles/components/_hero.scss
@@ -4,12 +4,35 @@
 //  Hero
 // ***********************************************
 .hero {
-  &-container {
+
+  @media #{$device-l} {
+  }
+
+  &-catch {
 
     @media #{$device-l} {
     }
+
+    &.is-typewrite {
+      line-height: 2.0;
+      font-family: $ff-mono;
+      letter-spacing: 0.15em;
+      font-size: 1.8rem;
+      font-weight: bold;
+      white-space: nowrap;
+      @extend %typewrite;
+    }
+
+    small {
+      font-size: 1.2rem;
+      font-weight: bold;
+      letter-spacing: 0.6em;
+    }
   }
 
-  @media #{$device-l} {
+  &-catch {
+
+    @media #{$device-l} {
+    }
   }
 }
