Sass変数に対応

--- a/src/vue-cli3/src/styles/_base.scss
+++ b/src/vue-cli3/src/styles/_base.scss
@@ -77,7 +77,7 @@ html {
   bottom: 0;
   left: 0;
   margin: auto;
-  background-image: url("#{$root}bg_line.svg");
+  // background-image: url("#{$root}bg_line.svg");
   background-repeat: repeat;
   background-position: center top;
   background-size: 75px 1px;
