--- a/src/vue-cli3/src/styles/_variables.scss
+++ b/src/vue-cli3/src/styles/_variables.scss
@@ -3,7 +3,7 @@
 // ***********************************************
 //  Global Variables
 // ***********************************************
-$root: "./assets/";
+$directory: "./assets/";
 
 
 // Size
