--- a/src/vue-cli3/src/styles/_base.scss
+++ b/src/vue-cli3/src/styles/_base.scss
@@ -24,8 +24,8 @@
 }
 
 html {
-  font-family: $ff;
-  font-size: 10px;
+  font-family: $ff !important;
+  font-size: 10px !important;
 
   body {
     font-size: 1.2rem;
@@ -77,7 +77,7 @@ html {
   bottom: 0;
   left: 0;
   margin: auto;
-  // background-image: url("#{$root}bg_line.svg");
+  // background-image: url(".#{$directory}bg_line.svg");
   background-repeat: repeat;
   background-position: center top;
   background-size: 75px 1px;
