--- a/src/vue-cli3/src/styles/styles.scss
+++ b/src/vue-cli3/src/styles/styles.scss
@@ -4,6 +4,7 @@
 
 // Mixin & Animate
 // ===============================================
+@import "mixin/_carousel.scss";
 @import "mixin/_placeholdercolor.scss";
 @import "_animate";
 
