--- a/src/vue-cli3/src/styles/_text.scss
+++ b/src/vue-cli3/src/styles/_text.scss
@@ -20,10 +20,16 @@
   font-weight: bold;
   font-size: 4.0rem;
   letter-spacing: 0.3em;
-  white-space: nowrap;
+  // white-space: nowrap;
+
+  @media #{$device-l} {
+  }
 
   &:first-letter {
     font-size: 7.0rem;
+
+    @media #{$device-l} {
+    }
   }
 }
 
