Footer Markup and Styles Updated.

--- a/src/vue-cli3/src/styles/_variables.scss
+++ b/src/vue-cli3/src/styles/_variables.scss
@@ -23,7 +23,7 @@ $color-brand: (
     "main": #999,
      "sub": #bbb,
   "accent": #00fcff,
-    "base": #fff
+    "base": #151515
 );
 
 $color-text: (
