--- a/src/vue-cli3/src/styles/components/_works.scss
+++ b/src/vue-cli3/src/styles/components/_works.scss
@@ -11,7 +11,7 @@
     left: 0;
     width: 313px;
     height: 124px;
-    background-color: #151515;
+    background-color: map-get($color-brand, "base");
   }
 
   .work {
