--- a/src/vue-cli3/src/styles/components/_footer.scss
+++ b/src/vue-cli3/src/styles/components/_footer.scss
@@ -3,6 +3,147 @@
 // ***********************************************
 //  Footer
 // ***********************************************
-
-// Mixin
+// Footer
 // ===========================
+.l-footer {
+  position: relative;
+  margin-bottom: 105px;
+  background-color: map-get($color-brand, "base");
+
+  @media #{$device-l} {
+  }
+
+  .contents {
+    padding: 90px 0 335px;
+  }
+}
+
+.footer {
+  &-catch {
+    &.is-typewrite {
+      line-height: 2.0;
+      font-family: $ff-mono;
+      letter-spacing: 0.15em;
+      font-size: 1.8rem;
+      font-weight: bold;
+      white-space: nowrap;
+      @extend %typewrite;
+    }
+
+    @media #{$device-l} {
+    }
+  }
+
+  &-menu {
+    position: relative;
+    padding-top: 40px;
+    margin-top: 30px;
+
+    @media #{$device-l} {
+      // display: flex;
+      // justify-content: space-betwewn;
+    }
+
+    &::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 93px;
+      height: 1px;
+      background-color: #fff;
+    }
+
+    >li {
+      margin-top: 20px;
+
+      @media #{$device-l} {
+      }
+
+      &:first-child {
+        margin-top: 0;
+      }
+    }
+
+    a {
+      line-height: 2.0;
+      @extend %mono;
+      font-weight: bold;
+      color: #fff;
+      text-decoration: none;
+
+      @media #{$device-l} {
+      }
+    }
+  }
+}
+
+// Page Top
+// ===========================
+.page-top {
+  position: absolute;
+  top: 86.3%;
+  right: 0;
+  left: 0;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin: 0 auto;
+  width: calc(7em + 185px);
+  transform: rotate(90deg);
+  transform-origin: center bottom;
+
+  @media #{$device-l} {
+  }
+
+  >a {
+    display: block;
+    margin-left: auto;
+    text-align: center;
+    font-family: $ff-mono;
+    color: #fff;
+    font-weight: bold;
+    letter-spacing: 0.1em;
+    text-decoration: none;
+
+    @media #{$device-l} {
+    }
+
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      display: block;
+      margin: auto 0;
+      width: 11px;
+      height: 11px;
+      border: 2px solid #fff;
+      border-right: none;
+      border-bottom: none;
+      transform: rotate(-45deg);
+      transform-origin: center bottom;
+    }
+
+    &::before {
+      left: 5px;
+    }
+
+    &::after {
+      left: 15px;
+    }
+  }
+}
+
+// Copyright
+// ===========================
+.copyright {
+  @media #{$device-l} {
+  }
+
+  >small {
+    @media #{$device-l} {
+    }
+  }
+}
