--- a/src/vue-cli3/src/styles/_pager.scss
+++ b/src/vue-cli3/src/styles/_pager.scss
@@ -11,15 +11,17 @@
     display: inline-block;
     height: 24px;
     padding: 0 35px;
+    margin: 0 25px;
   }
 
   position: relative;
   overflow: hidden;
+  height: 4px;
+  margin: 10px 0;
 
   &-list {
     display: block;
-    height: 4px;
-    margin: 10px 0;
+    height: 100%;
     background-color: $disabled;
     pointer-events: none;
 
@@ -27,8 +29,8 @@
       position: relative;
       z-index: 20;
       float: left;
-      height: 4px;
       width: 35px;
+      height: 100%;
       vertical-align: middle;
       border-left: 9px solid #000;
 
@@ -40,10 +42,9 @@
 
   &-bar {
     position: absolute;
-    z-index: 10;
     top: 0;
-    bottom: 0;
-    height: 4px;
+    z-index: 10;
+    height: 100%;
     margin: auto 0;
     background-color: map-get($color-brand, "accent");
     cursor: pointer;
