--- a/src/vue-cli3/src/styles/components/_member.scss
+++ b/src/vue-cli3/src/styles/components/_member.scss
@@ -5,14 +5,42 @@
 // ***********************************************
 
 #members{
-  margin-bottom: 100px;
+  margin: 100px 0;
   .section-title {
+    position: relative;
     margin-bottom: 50px;
-    margin-left: 1em;
+    padding-left: 1.4em;
     .first-letter{
       display: block;
-      margin-bottom: 160px;
-      margin-left: -1em;
+      margin-bottom: 110px;
+      margin-left: -1.5em;
+    }
+    .decoration-line{
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      height: 130px;
+      width: 20px;
+      span{
+        position: absolute;
+        display: block;
+        width: 2px;
+        height: 90px;
+        background-color: #fff;
+        &:nth-of-type(1){
+          height: 45px;
+          top: 45px;
+        }
+        &:nth-of-type(2){
+          height: 90px;
+          right: 0;
+        }
+        &:nth-of-type(3){
+          height: 28px;
+          bottom: 0;
+          right: 0;
+        }
+      }
     }
     .text-color-accent{
       font-size: 4rem;
