--- a/src/vue-cli3/src/styles/components/_about.scss
+++ b/src/vue-cli3/src/styles/components/_about.scss
@@ -7,7 +7,9 @@
 #about {
   position: relative;
   margin-bottom: 100px;
-
+  @media #{$device-l} {
+    margin-bottom: 170px;
+  }
   .section-title {
     margin-bottom: 50px;
   }
