--- a/src/vue-cli3/src/styles/components/_activity.scss
+++ b/src/vue-cli3/src/styles/components/_activity.scss
@@ -6,16 +6,14 @@
 
 #activities {
   margin-bottom: 100px;
-
   @media #{$device-l} {
+    margin-bottom: 330px;
   }
-
   .activity {
     &-title {
-      margin: 0 45px;
+      // margin: 0 45px;
       font-size: 2.0rem;
       font-weight: bold;
-
       @media #{$device-l} {
       }
     }
@@ -23,19 +21,24 @@
     &-list {
       &-container {
         margin-top: 30px;
+        margin: 30px -20px 0;
       }
 
       position: relative;
       display: flex;
       justify-content: flex-start;
       margin: 0 126px / $sp-max-width * 100% 15px;
-
+      @media #{$device-l} {
+        margin: 0 25px 60px;
+      }
       >li {
         flex: 0 0 auto;
         width: 460px / $sp-max-width * 100%;
         min-width: 230px;
         margin-left: 20px;
-
+        @media #{$device-l} {
+          width: 320px;
+        }
         &:first-child {
           margin-left: 0;
         }
