animation いろいろ途中

--- a/src/vue-cli3/src/styles/components/_footer.scss
+++ b/src/vue-cli3/src/styles/components/_footer.scss
@@ -98,7 +98,10 @@
       font-weight: bold;
       color: #fff;
       text-decoration: none;
-
+      transition: all .8s;
+      &:hover{
+        letter-spacing: 7px;
+      }
       @media #{$device-l} {
       }
     }
