--- a/src/vue-cli3/src/styles/components/_hero.scss
+++ b/src/vue-cli3/src/styles/components/_hero.scss
@@ -46,7 +46,10 @@
       color: #fff;
       text-decoration: none;
       font-weight: bold;
-
+      &:hover{
+        letter-spacing: 0.4rem;
+        color: #00fcff;
+      }
       &::before,
       &::after {
         content: "";
