--- a/src/vue-cli3/src/styles/components/_member.scss
+++ b/src/vue-cli3/src/styles/components/_member.scss
@@ -12,19 +12,27 @@
     margin-bottom: 50px;
     padding-left: 1.4em;
     @media #{$device-l} {
-      margin-left: calc(50% - 1.4em);
+      padding-top: 190px;
+      margin-left: calc(42% - 1.4em);
     }
     .first-letter{
       display: block;
-      margin-bottom: 110px;
-      margin-left: -1.5em;
+      margin-bottom: 115px;
+      margin-left: -1.2em;
+      @media #{$device-l} {
+        margin-left: 0;
+      }
     }
     .decoration-line{
       position: absolute;
       left: 0;
-      bottom: 0;
+      bottom: 5px;
       height: 130px;
       width: 20px;
+      @media #{$device-l} {
+        left: -40px;
+        bottom: 5px;
+      }
       span{
         position: absolute;
         display: block;
@@ -43,6 +51,7 @@
           height: 28px;
           bottom: 0;
           right: 0;
+          left: auto;
         }
       }
     }
@@ -73,7 +82,7 @@
   }
   .background-image{
     width: 83%;
-    top: 205px;
+    top: 190px;
     right: 0;
     padding-bottom: 36%;
     background-image: url(".#{$directory}about_bg.jpg");
