--- a/src/vue-cli3/src/styles/components/_menu.scss
+++ b/src/vue-cli3/src/styles/components/_menu.scss
@@ -212,6 +212,7 @@
     }
 
     a {
+      position: relative;
       display: block;
       padding: 5px;
       line-height: 1.5;
@@ -220,6 +221,22 @@
       color: #fff;
       font-weight: bold;
       text-decoration: none;
+      transition: all 1s;
+      @media #{$device-l} {
+        &:hover{
+          padding-left: 45px;
+        }
+        &::after,
+        &::before{
+          content: "";
+          display: block;
+          left: 0;
+          height: 1px;
+          width: 0;
+          opacity: 0;
+          transition: all .8s;
+        }
+      }
     }
   }
 }
