--- a/src/vue-cli3/src/styles/components/_about.scss
+++ b/src/vue-cli3/src/styles/components/_about.scss
@@ -7,6 +7,9 @@
 #about {
   position: relative;
   margin-bottom: 100px;
+  .wrap {
+    position: relative;
+  }
   @media #{$device-l} {
     margin-bottom: 170px;
   }
@@ -42,13 +45,17 @@
 
   .background-image {
     width: 83%;
+    max-width: 1000px;
     top: 50px;
-    right: 0;
+    right: -150px;
     padding-bottom: 36%;
     background-image: url(".#{$directory}about_bg.jpg");
+    background-repeat: no-repeat;
+    z-index: -1;
+
     @media #{$device-l} {
       top: -50px;
-      width: 71%;
+      width: 90%;
     }
   }
 }
