--- a/src/vue-cli3/src/styles/_animate.scss
+++ b/src/vue-cli3/src/styles/_animate.scss
@@ -19,12 +19,18 @@
 }
 
 @keyframes gototop {
-  50% {
-    transform: translateX(10px) rotate(-45deg);
+  0% {
+    transform: translateX(13px) rotate(-45deg);
+  }
+  10% {
     opacity: 1;
   }
+  80% {
+    transform: translateX(-5px) rotate(-45deg);
+    opacity: .8;
+  }
   100% {
-    transform: translateX(-15px) rotate(-45deg);
+    transform: translateX(-10px) rotate(-45deg);
     opacity: .1;
   }
 }
