--- a/src/vue-cli3/src/styles/components/_contact.scss
+++ b/src/vue-cli3/src/styles/components/_contact.scss
@@ -5,16 +5,24 @@
 // ***********************************************
 
 .contents{
-  display: none;
-  margin-bottom: 50px;
+  // display: none;
+  margin-bottom: 120px;
   .section-title{
     margin-bottom: 40px;
+    @media #{$device-l} {
+      text-align: center;
+      padding-left: 0;
+    }
   }
   .mail-text{
     text-align: center;
+    font-family: $ff-mono;;
     font-size: 1.4rem;
+    @media #{$device-l} {
+    }
     a{
       color: #fff;
+      text-decoration: none;
     }
     &:after{
       content: "";
@@ -30,8 +38,14 @@
     justify-content: space-between;
     width: 70%;
     margin: 0 auto;
+    @media #{$device-l} {
+      width: 180px;
+    }
     li{
       width: 18%;
+      @media #{$device-l} {
+        width: 20px;
+      }
     }
     .sns-button{
       img{
