--- a/src/vue-cli3/src/styles/components/_footer.scss
+++ b/src/vue-cli3/src/styles/components/_footer.scss
@@ -175,9 +175,10 @@
     height: $short;
     margin-top: -100%;
     text-align: right;
+    font-size: 1.2rem;
     font-family: $ff-mono;
-    color: #fff;
     font-weight: bold;
+    color: #fff;
     letter-spacing: 0.1em;
     text-decoration: none;
     white-space: nowrap;
@@ -190,7 +191,7 @@
 
     &:hover{
       letter-spacing: 0.4rem;
-      color: #00fcff;
+      color: map-get($color-brand,'accent');
     }
 
     &::before,
@@ -211,7 +212,7 @@
       left: 5px;
       opacity: 0;
       animation-name: gototop;
-      animation-duration: 2.5s;
+      animation-duration: 2s;
       animation-timing-function: linear;
       animation-iteration-count: infinite;
     }
@@ -223,6 +224,26 @@
       left: 15px;
     }
   }
+}
+
+@-webkit-keyframes go-to-anime {
+	0% {
+		width: 1px;
+		height: 1px;
+		background: map-get($color-brand,'accent');
+	}
+	50% {
+		width: 1px;
+		height: 50px;
+		margin-top: 32px;
+		background: map-get($color-brand,'accent');
+	}
+	100% {
+		width: 1px;
+		height: 1px;
+		margin-top: 82px;
+		background: map-get($color-brand,'accent');
+	}
 }
 
 // Copyright
@@ -256,3 +277,5 @@
     }
   }
 }
+
+
