--- a/src/vue-cli3/src/styles/components/_about.scss
+++ b/src/vue-cli3/src/styles/components/_about.scss
@@ -20,7 +20,7 @@
   .about-text {
     margin-left: 13%;
     line-height: 2.5;
-    letter-spacing: 0.1em;
+    letter-spacing: 4.8px;
     @media #{$device-l} {
       width: 650px;
       margin-left: 200px;
@@ -33,13 +33,18 @@
         display: block;
         width: 50%;
         height: 1px;
-        margin: 50px 0;
+        margin: 60px 0;
         background-color: #fff;
+        @media #{$device-l} {
+          width: 140px;
+        }
       }
     }
 
     &.is-english {
       @extend %mono;
+      font-size: 10px;
+      opacity: 0.3;
     }
   }
 
@@ -51,7 +56,7 @@
     background-image: url(".#{$directory}about_bg.jpg");
     background-repeat: no-repeat;
     z-index: -1;
-    
+
     @media #{$device-l} {
       top: -50px;
       right: -150px;
